Update Jolt to 5.6.0